--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
     </div>
   </nav>
   <div class="container">
-    <h2>Welcome to the Quiz App</h2>
+    <h2>Welcome to the Abhyasa</h2>
     <p>Learn, practice, and compete with our interactive quizzes and learning resources.</p>
     <div class="nav-buttons">
      <!-- Font Awesome CDN -->
