--- a/learn.html
+++ b/learn.html
@@ -13,6 +13,7 @@
         </a>
     <div>
       <!--<span id="username-display"></span>-->
+      <button onclick="backToHome()()" class="btn btn-red">Back to Home</button>
       <button onclick="logout()" class="btn btn-red">Logout</button>
     </div>
   </nav>
